# centarus

./: .gitignore  CMakeLists.txt  README.md  app.overlay  client.conf  prj.conf  server.conf
src/: main.c  modbus_client.c  modbus_server.c  shared_data.h
